syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "session/rpc_create_session.proto";
import "session/rpc_extend_session.proto";
import "session/rpc_get_session.proto";
import "session/rpc_revoke_session.proto";
import "session/rpc_delete_session.proto";
import "session/rpc_verify_session.proto";

option go_package = "github.com/Streamfair/streamfair_session_svc/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info: {
	  title: "Streamfair Session Service";
	  version: "1.0";
	  contact: {
		name: "Streamfair";
		url: "https://github.com/Streamfair";
		email: "nelix@posteo.de";
	  };
	};
};

service SessionService {
    // Sessions
    rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse) {
        option (google.api.http) = {
            post: "/streamfair/v1/create_session"
            body: "*"
        };
		option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "add description here",
			summary: "add summary here",
		};
    }

    rpc ExtendSession(ExtendSessionRequest) returns (ExtendSessionResponse) {
        option (google.api.http) = {
            patch: "/streamfair/v1/extend_session/{uuid}"
            body: "*"
        };
		option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "add description here",
			summary: "add summary here",
		};
    }

    rpc GetSession(GetSessionRequest) returns (GetSessionResponse) {
        option (google.api.http) = {
            get: "/streamfair/v1/get_session/{uuid}"
        };
		option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "add description here",
			summary: "add summary here",
		};
    }

    rpc DeleteSession(DeleteSessionRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/streamfair/v1/delete_session/{uuid}"
        };
		option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "add description here",
			summary: "add summary here",
		};
    }

    rpc RevokeSession(RevokeSessionRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            patch: "/streamfair/v1/revoke_session/{uuid}"
        };
		option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "add description here",
			summary: "add summary here",
		};
    }

    rpc VerifySession(VerifySessionRequest) returns (VerifySessionResponse) {
        option (google.api.http) = {
            get: "/streamfair/v1/verify_session/{uuid}"
        };
		option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "add description here",
			summary: "add summary here",
		};
    }
}
